--- a/app/templates/form_v2.ui
+++ b/app/templates/form_v2.ui
@@ -22,7 +22,7 @@
      <item row="1" column="0">
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -127,7 +127,7 @@
            <item row="10" column="1">
             <widget class="QLabel" name="label_7">
              <property name="text">
-              <string>TextLabel</string>
+              <string/>
              </property>
             </widget>
            </item>
