--- a/lab01/app/templates/form_v2.ui
+++ b/lab01/app/templates/form_v2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>1000</height>
+    <width>461</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
      <item row="1" column="0">
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -145,7 +145,7 @@
            <item row="0" column="0">
             <widget class="QTabWidget" name="tabWidget_2">
              <property name="currentIndex">
-              <number>0</number>
+              <number>2</number>
              </property>
              <widget class="QWidget" name="tab_8">
               <attribute name="title">
@@ -239,20 +239,20 @@
                  <item row="3" column="1">
                   <widget class="QLineEdit" name="rt_y_center_evk_ledit"/>
                  </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_17">
+                 <item row="0" column="1">
+                  <widget class="QLabel" name="label_18">
                    <property name="text">
-                    <string>Ось Х</string>
+                    <string>Ось Y</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignBottom|Qt::AlignHCenter</set>
                    </property>
                   </widget>
                  </item>
-                 <item row="0" column="1">
-                  <widget class="QLabel" name="label_18">
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_17">
                    <property name="text">
-                    <string>Ось Y</string>
+                    <string>Ось Х</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignBottom|Qt::AlignHCenter</set>
@@ -366,10 +366,18 @@
                <item>
                 <layout class="QGridLayout" name="gridLayout_5">
                  <item row="1" column="3">
-                  <widget class="QLineEdit" name="ry_1_afin_ledit"/>
+                  <widget class="QLineEdit" name="ry_1_afin_ledit">
+                   <property name="text">
+                    <string>0.86</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="0" column="2">
-                  <widget class="QLineEdit" name="rx_0_afin_ledit"/>
+                  <widget class="QLineEdit" name="rx_0_afin_ledit">
+                   <property name="text">
+                    <string>0.86</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="0" column="1">
                   <widget class="QLabel" name="label_11">
@@ -382,13 +390,25 @@
                   </widget>
                  </item>
                  <item row="2" column="3">
-                  <widget class="QLineEdit" name="r0_1_afin_ledit"/>
+                  <widget class="QLineEdit" name="r0_1_afin_ledit">
+                   <property name="text">
+                    <string>0</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="0" column="3">
-                  <widget class="QLineEdit" name="rx_1_afin_ledit"/>
+                  <widget class="QLineEdit" name="rx_1_afin_ledit">
+                   <property name="text">
+                    <string>0.5</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="2" column="2">
-                  <widget class="QLineEdit" name="r0_0_afin_ledit"/>
+                  <widget class="QLineEdit" name="r0_0_afin_ledit">
+                   <property name="text">
+                    <string>0</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="1" column="1">
                   <widget class="QLabel" name="label_12">
@@ -401,7 +421,11 @@
                   </widget>
                  </item>
                  <item row="1" column="2">
-                  <widget class="QLineEdit" name="ry_0_afin_ledit"/>
+                  <widget class="QLineEdit" name="ry_0_afin_ledit">
+                   <property name="text">
+                    <string>-0.5</string>
+                   </property>
+                  </widget>
                  </item>
                  <item row="2" column="1">
                   <widget class="QLabel" name="label_13">
@@ -463,11 +487,6 @@
        <widget class="QWidget" name="tab_5">
         <attribute name="title">
          <string>Lab 4</string>
-        </attribute>
-       </widget>
-       <widget class="QWidget" name="tab_6">
-        <attribute name="title">
-         <string>Lab 5</string>
         </attribute>
        </widget>
        <widget class="QWidget" name="tab_7">
